docs(esl-footnotes): fix initial bodys text-align

--- a/pages/src/common/reboot.less
+++ b/pages/src/common/reboot.less
@@ -26,7 +26,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  text-align: left;
+  text-align: start;
 }
 
 footer, header, main, nav, section {
